--- a/src/pages/testimonials.module.scss
+++ b/src/pages/testimonials.module.scss
@@ -39,33 +39,16 @@
     text-align: center;
 }
 
-.card {
-    border: none;
-    background-color: transparent;
+.testimonial-section {
+    padding: 20px 10px;
 }
 
-.card-header {
-    background-color: transparent;
-    border-bottom: none;
-    padding: 0;
+.testimonial-name {
+    font-weight: bold;
 }
 
-.btn-toggle {
-    color: #900561;
-    display: block;
-    margin: 0 auto;
-}
-
-.btn-toggle:hover, 
-.btn-toggle:active, 
-.btn-toggle:focus {
-    color: #900561;
-    text-decoration: none;
-}
-
-.card-body {
-    height: 200px;
-    overflow: auto;
+.hr {
+    width: 100%;
 }
 
 .main-bkgd {
@@ -74,10 +57,10 @@
     left: 11%;
     width: 30%;
     opacity: .30;
-    z-index: -1;
+    z-index: -3;
 }
 
-// Page Right Section
+// Home Page Right Section
 .right-section {
     padding: 0;
 }
@@ -100,6 +83,10 @@
 .right-top-text {
     text-align: center;
     padding: 0 30px;
+
+    p {
+        padding: 20px 0;
+    }
 }
 
 .right-bottom-row {
@@ -122,28 +109,22 @@
     width: 100%;
     height: 50vh;
     padding: 50px 20px;
-}
 
-.right-bottom-description {
-    text-align: center;    
+    p {
+        text-align: center;
+        padding: 20px 0;
+    }
 }
 
 @media (min-width: 1054px) and (max-width: 1184px) {
-    .right-top-img {
+    .right-top-img{
         margin-top: -9%;
     }
 }
 
 @media (min-width: 992px) and (max-width: 1053px) {
-    .right-top-img {
+    .right-top-img{
         margin-top: -10%;
-    }
-}
-
-@media (min-width: 992px) {
-    .arrow-left-icon, 
-    .arrow-right-icon {
-        display: none;
     }
 }
 
@@ -152,20 +133,9 @@
         height: 93.5vh;
     }
 
-    .arrow-left-icon {
-        color: #900561;
-        font-size:40px;
-        position: absolute;
-        left: 1%;
-        bottom: 50%;
-    }
-
-    .arrow-right-icon {
-        color: #900561;
-        font-size:40px;
-        position: absolute;
-        right: 1%;
-        bottom: 50%;
+    .main-text {
+        font-size: 25px;
+        padding: 20px 50px;
     }
 
     .main-bkgd {
@@ -178,24 +148,10 @@
     }
 }
 
-@media (max-width: 575px) {.arrow-left-icon, 
-    .arrow-right-icon {
-        font-size: 30px;
-    }
-
-    .arrow-left-icon {
-        position: sticky;
-        bottom: 46%;
-    }
-
-    .arrow-right-icon {
-        position: sticky;
-        bottom: 46%;
-        left: 100%;
-    }
-
-    .main-bkgd {
-        position: sticky;
+@media (max-width: 575px) {
+    .main-text {
+        font-size: 20px;
+        padding: 20px 10px;
     }
 }
 
