edited styling for Index page and related components through global.css

--- a/src/styles/mission.module.scss
+++ b/src/styles/mission.module.scss
@@ -161,6 +161,10 @@
         padding: 20px 30px;
     }
 
+    .btn {
+        font-size: 16px;
+    }
+
     .main-bkgd {
         left: 12%;
         width: 85%;
