--- a/src/styles/faqs.module.scss
+++ b/src/styles/faqs.module.scss
@@ -1,44 +1,3 @@
-.btn {
-    color: #900561;
-    border: #900561 solid 1px;
-    border-radius: 6px;
-    width: 250px;
-    height: 45px;
-    font-family: 'Montserrat', sans-serif;
-    text-align: center;
-    padding: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    transition: background 1s linear;
-    z-index: 100;
-}
-
-.btn:hover {
-    color: #ffffff;
-    background-color: #900561;
-    text-decoration: none;
-}
-
-// Page Main Section
-.main-section {
-    position: relative;
-}
-
-.main-title-bold {
-    color: #900561;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 50px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-    margin: 50px 0;
-}
-
-.main-section-title {
-    text-align: center;
-}
-
 .card {
     border: none;
     background-color: transparent;
@@ -54,153 +13,18 @@
     color: #900561;
     display: block;
     margin: 0 auto;
+    border:none;
 }
 
 .btn-toggle:hover, 
 .btn-toggle:active, 
 .btn-toggle:focus {
     color: #900561;
+    background-color: transparent;
     text-decoration: none;
 }
 
 .card-body {
     height: 200px;
     overflow: auto;
-}
-
-.main-bkgd {
-    position: fixed;
-    bottom: 0;
-    left: 11%;
-    width: 30%;
-    opacity: .30;
-    z-index: -1;
-}
-
-// Page Right Section
-.right-section {
-    padding: 0;
-}
-
-.right-top-img {
-    background-image: url(../images/home-right-top-background.jpg);
-    background-repeat: none;
-    background-attachment: scroll;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    opacity: .30;
-    margin-top: -8%;
-    width: 100%;
-    height: 51vh;
-}
-
-.right-top-text {
-    text-align: center;
-    padding: 0 30px;
-}
-
-.right-bottom-row {
-    background-image: url(../images/home-right-bottom-background.jpg);
-    background-repeat: none;
-    background-attachment: scroll;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    width: 100%;
-    height: 50vh;
-}
-
-.right-bottom-section {
-    position: absolute;
-    right: 0;
-    background-color: rgba(255,255,255, .70);
-    width: 100%;
-    height: 50vh;
-    padding: 50px 20px;
-}
-
-.right-bottom-description {
-    text-align: center;    
-}
-
-@media (min-width: 1054px) and (max-width: 1184px) {
-    .right-top-img {
-        margin-top: -9%;
-    }
-}
-
-@media (min-width: 992px) and (max-width: 1053px) {
-    .right-top-img {
-        margin-top: -10%;
-    }
-}
-
-@media (min-width: 992px) {
-    .arrow-left-icon, 
-    .arrow-right-icon {
-        display: none;
-    }
-}
-
-@media (max-width: 991px) {
-    .main-section {
-        height: 93.5vh;
-    }
-
-    .arrow-left-icon {
-        color: #900561;
-        font-size:40px;
-        position: absolute;
-        left: 1%;
-        bottom: 50%;
-    }
-
-    .arrow-right-icon {
-        color: #900561;
-        font-size:40px;
-        position: absolute;
-        right: 1%;
-        bottom: 50%;
-    }
-
-    .main-bkgd {
-        left: 12%;
-        width: 85%;
-    }
-
-    .right-section {
-        display: none;
-    }
-}
-
-@media (max-width: 575px) {.arrow-left-icon, 
-    .arrow-right-icon {
-        font-size: 30px;
-    }
-
-    .arrow-left-icon {
-        position: sticky;
-        bottom: 46%;
-    }
-
-    .arrow-right-icon {
-        position: sticky;
-        bottom: 46%;
-        left: 100%;
-    }
-
-    .main-bkgd {
-        position: sticky;
-    }
-}
-
-@media (max-width:387px) {
-    .main-title-bold {
-        font-size: 40px;
-    }
 }
