--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,6 +69,39 @@ Plugins:
     position: relative;
 }
 
+.main-logo {
+    width: 250px;
+    display: block;
+    padding-top: 50px;
+    margin: 0 auto;
+}
+
+.main-title-bold {
+    color: #900561;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 50px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    margin: 50px 0;
+}
+
+.main-section-title {
+    text-align: center;
+}
+
+.main-text {
+    text-align: center;
+    padding: 20px 10px;
+    margin-bottom: 0;
+}
+
+.price {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
 .main-bkgd {
     position: fixed;
     bottom: 0;
@@ -105,6 +138,7 @@ Plugins:
 
 .right-top-text p {
     padding: 20px 0;
+    margin-bottom: 0;
 }
 
 .right-bottom-row {
@@ -132,6 +166,7 @@ Plugins:
 .right-bottom-section p {
     text-align: center;
     padding: 20px 0;
+    margin-bottom: 0;
 }
 
 @media (min-width: 1054px) and (max-width: 1184px) {
@@ -151,6 +186,11 @@ Plugins:
         height: 93.5vh;
     }
 
+    .main-text {
+        font-size: 25px;
+        padding: 20px 50px;
+    }
+
     .main-bkgd {
         left: 12%;
         width: 85%;
@@ -162,9 +202,24 @@ Plugins:
 }
 
 @media (max-width: 575px) {
+    .main-logo {
+        width: 200px;
+        padding-top: 20px;
+    }
+
+    .main-text {
+        font-size: 20px;
+        padding: 20px 10px;
+    }
 
     .btn {
         margin-bottom: 10px;
+    }
+}
+
+@media (max-width:387px) {
+    .main-title-bold {
+        font-size: 40px;
     }
 }
 
