edited missions page for desktop and mobile view.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -247,6 +247,11 @@ Plugins:
     font-size: 25px !important;
 }
 
+.slider .slick-prev,
+.slider .slick-next {
+    top: 80% !important;
+}
+
 .slick-dots li.slick-active button:before {
     color: #900561 !important;
 }
