styled the Testimonials page.

--- a/src/styles/testimonials.module.scss
+++ b/src/styles/testimonials.module.scss
@@ -5,3 +5,17 @@
 .testimonial-name {
     font-weight: bold;
 }
+
+@media (min-width: 992px) {
+    .testimonial-section {
+        overflow: auto;
+        height: 63vh;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .testimonial-section {
+        overflow: auto;
+        height: 70vh;
+    }
+}
