styled Mission page and Tasting page to display different content on desktop and mobile. Has to create extra components.

--- a/src/styles/mission.module.scss
+++ b/src/styles/mission.module.scss
@@ -1,20 +1,47 @@
+.accordion-section {
+    padding: 20px 50px;
+}
+
+.card {
+    border: none;
+    background-color: transparent;
+}
+
+.card-header {
+    background-color: transparent;
+    border-bottom: none;
+    padding: 0;
+}
+
+.btn-toggle {
+    color: #900561;
+    font-size: 20px;
+    display: block;
+    margin: 0 auto;
+    border:none;
+}
+
+.btn-toggle:hover, 
+.btn-toggle:active, 
+.btn-toggle:focus {
+    color: #900561;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+.card-body {
+    height: 200px;
+    overflow: auto;
+}
+
 @media (min-width: 992px) {
-    .mobile-text {
+    .slider-mobile {
         display: none;
     }
 }
 
 @media (max-width: 991px) {
-    .mobile-text {
-        font-size: 25px;
-        text-align: center;
-        padding: 20px 30px;
-    }
-}
-
-@media (max-width: 575px) {
-    .mobile-text {
-        font-size: 22px;
-        padding: 20px 10px;
+    .slider-desktop {
+        display: none;
     }
 }
