--- a/src/styles/vlog.module.scss
+++ b/src/styles/vlog.module.scss
@@ -13,6 +13,7 @@ iframe {
 @media (min-width: 992px) {
     .video-section {
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
         height: 63vh;
         display: grid;
         grid-template-columns: auto auto;
@@ -30,6 +31,7 @@ iframe {
 @media (min-width: 768px) and (max-width: 991px) {
     .video-section {
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
         height: 70vh;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -54,6 +56,7 @@ iframe {
 @media (max-width: 575px) {
     .video-section {
         overflow: auto;
+        -webkit-overflow-scrolling: touch;
         height: 60vh;
     }
 
