--- a/src/styles/vlog.module.scss
+++ b/src/styles/vlog.module.scss
@@ -65,3 +65,33 @@ iframe {
          height: 32.5vh;
      }
  }
+
+
+ /** Portrait Orientation **/
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+    .video-section {
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+        height: 100vh;
+    }
+
+    iframe {
+         width: 100%;
+         height: 57.5vh;
+     }
+  }
+
+   /* Portrait Orientation for iPhoneX */
+   @media screen and (min-width: 800px) and (max-width: 850px) and (orientation: landscape) {
+    .video-section {
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+        height: 135vh;
+        display: block;
+    }
+
+    iframe {
+         width: 100%;
+         height: 51.5vh;
+     }
+  }
