--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -102,7 +102,12 @@ Plugins:
 .price {
     text-align: center;
     font-weight: bold;
-    margin-bottom: 30px;
+}
+
+.price-qualifier {
+    text-align: center;
+    padding-top: 0;
+
 }
 
 .main-bkgd {
