edit styling on Mission Page.

--- a/src/styles/mission.module.scss
+++ b/src/styles/mission.module.scss
@@ -42,6 +42,9 @@
 }
 
 @media (max-width: 991px) {
+    .slider-mobile {
+        margin-bottom: 80px;
+    }
     .slider-desktop {
         display: none;
     }
