--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -213,22 +213,25 @@ Plugins:
         height: 93.5vh;
     }
 
-    .main-title-bold {
-        margin-top: 20px;
-    }
-
     .main-text {
         font-size: 25px;
     }
 
     .main-bkgd {
-        position: sticky;
-        left: 17%;
+        left: 18%;
         width: 70%;
+
     }
 
     .right-section {
         display: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .mission-page .main-bkgd {
+        position: absolute;
+        bottom: -13%;
     }
 }
 
@@ -238,17 +241,15 @@ Plugins:
         padding-top: 20px;
     }
 
-    .main-title-bold {
-        margin-top: 0;
-    }
-
     .main-text {
         font-size: 20px;
         padding: 20px 10px;
     }
 
     .main-bkgd {
-        left: 11%;
+        position: sticky;
+        left: 12%;
+        bottom: 0;
         width: 85%;
         opacity: 0.2;
     }
@@ -419,10 +420,5 @@ Plugins:
     .slick-prev, 
     .slick-next {
         display: none !important;
-    }
-
-    .slick-list {
-        z-index: 20;
-        margin-top: 50px !important;
     }
 }
