--- a/src/styles/vlog.module.scss
+++ b/src/styles/vlog.module.scss
@@ -30,7 +30,7 @@ iframe {
 
 @media (min-width: 768px) and (max-width: 991px) {
     .video-section {
-        overflow: auto;
+        overflow: scroll;
         -webkit-overflow-scrolling: touch;
         height: 62vh;
         display: grid;
