--- a/src/styles/vlog.module.scss
+++ b/src/styles/vlog.module.scss
@@ -30,7 +30,7 @@ iframe {
 
 @media (min-width: 768px) and (max-width: 991px) {
     .video-section {
-        overflow: scroll;
+        overflow: auto;
         -webkit-overflow-scrolling: touch;
         height: 62vh;
         display: grid;
@@ -57,7 +57,7 @@ iframe {
     .video-section {
         overflow: auto;
         -webkit-overflow-scrolling: touch;
-        height: 60vh;
+        height: 96vh;
     }
 
     iframe {
